err/epubmaker.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/epubmaker'...
Compiling './lib/python3.5/site-packages/epubmaker/EpubMaker.py'...
***   File "./lib/python3.5/site-packages/epubmaker/EpubMaker.py", line 367
    except StandardError, what:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/epubmaker/lib'...
Compiling './lib/python3.5/site-packages/epubmaker/lib/DublinCore.py'...
***   File "./lib/python3.5/site-packages/epubmaker/lib/DublinCore.py", line 447
    except StandardError, what:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/epubmaker/mydocutils'...
Listing './lib/python3.5/site-packages/epubmaker/mydocutils/gutenberg'...
Listing './lib/python3.5/site-packages/epubmaker/mydocutils/gutenberg/parsers'...
Listing './lib/python3.5/site-packages/epubmaker/mydocutils/gutenberg/transforms'...
Listing './lib/python3.5/site-packages/epubmaker/mydocutils/gutenberg/writers'...
Compiling './lib/python3.5/site-packages/epubmaker/mydocutils/gutenberg/writers/nroff.py'...
***   File "./lib/python3.5/site-packages/epubmaker/mydocutils/gutenberg/writers/nroff.py", line 103
    0x0011: ur"\~",       # nbsp, see: Unitame.py
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/epubmaker/mydocutils/parsers'...
Listing './lib/python3.5/site-packages/epubmaker/mydocutils/transforms'...
Compiling './lib/python3.5/site-packages/epubmaker/mydocutils/transforms/parts.py'...
***   File "./lib/python3.5/site-packages/epubmaker/mydocutils/transforms/parts.py", line 834
    re_quotes_thin_space = re.compile (ur'([“„‟’])([‘‚‛”])')
                                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/epubmaker/mydocutils/writers'...
Compiling './lib/python3.5/site-packages/epubmaker/mydocutils/writers/nroff.py'...
***   File "./lib/python3.5/site-packages/epubmaker/mydocutils/writers/nroff.py", line 242
    0x0027: ur"\(cq",     # ' is non-breaking command
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/epubmaker/mydocutils/writers/xetex.py'...
***   File "./lib/python3.5/site-packages/epubmaker/mydocutils/writers/xetex.py", line 591
    ord ('#'):  ur'\#',
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/epubmaker/packagers'...
Compiling './lib/python3.5/site-packages/epubmaker/packagers/__init__.py'...
***   File "./lib/python3.5/site-packages/epubmaker/packagers/__init__.py", line 72
    except IOError, what:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/epubmaker/parsers'...
Compiling './lib/python3.5/site-packages/epubmaker/parsers/GutenbergTextParser.py'...
***   File "./lib/python3.5/site-packages/epubmaker/parsers/GutenbergTextParser.py", line 105
    return map (lambda (x, y): x and y, zip (iterable1, iterable2))
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/epubmaker/parsers/HTMLParser.py'...
***   File "./lib/python3.5/site-packages/epubmaker/parsers/HTMLParser.py", line 209
    raise ValueError, stderr
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/epubmaker/parsers/ImageParser.py'...
***   File "./lib/python3.5/site-packages/epubmaker/parsers/ImageParser.py", line 100
    except IOError, what:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/epubmaker/parsers/RSTParser.py'...
***   File "./lib/python3.5/site-packages/epubmaker/parsers/RSTParser.py", line 89
    except etree.ParseError, what:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/epubmaker/parsers/__init__.py'...
***   File "./lib/python3.5/site-packages/epubmaker/parsers/__init__.py", line 220
    except IOError, what:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/epubmaker/writers'...
Compiling './lib/python3.5/site-packages/epubmaker/writers/EpubWriter.py'...
***   File "./lib/python3.5/site-packages/epubmaker/writers/EpubWriter.py", line 960
    except etree.XMLSyntaxError, what:
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/epubmaker/writers/HTMLWriter.py'...
***   File "./lib/python3.5/site-packages/epubmaker/writers/HTMLWriter.py", line 99
    except StandardError, what:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/epubmaker/writers/KindleWriter.py'...
***   File "./lib/python3.5/site-packages/epubmaker/writers/KindleWriter.py", line 70
    except OSError, what:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/epubmaker/writers/PDFWriter.py'...
***   File "./lib/python3.5/site-packages/epubmaker/writers/PDFWriter.py", line 73
    except OSError, what:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/epubmaker/writers/PicsDirWriter.py'...
***   File "./lib/python3.5/site-packages/epubmaker/writers/PicsDirWriter.py", line 77
    except IOError, what:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/epubmaker-0.3.20.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Compiling './setup_inc.py'...
Listing './share'...
Listing './share/python-wheels'...
